<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="imageThumbnailItem"
            type="com.njstyle.gettyimagesgallery.ui.image.constant.ImageThumbnailItem"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_thumbnail_item_size"
        android:background="#000000"
        >

        <ImageView
            android:id="@+id/iv"
            android:layout_width="@dimen/image_thumbnail_item_size"
            android:layout_height="@dimen/image_thumbnail_item_size"
            android:adjustViewBounds="true"

            app:imageCenterCropUrl="@{imageThumbnailItem.imageThumbnailUrl}"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />

        <TextView
            android:id="@+id/tvImageCaption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:background="#73000000"
            android:textColor="#FFFFFF"

            android:paddingStart="8dp"
            android:paddingEnd="8dp"

            android:layout_marginTop="4dp"

            android:singleLine="true"
            android:visibility="gone"

            android:text="@{imageThumbnailItem.imageCaption}"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintBottom_toBottomOf="parent"
            />

    </android.support.constraint.ConstraintLayout>
</layout>
