<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>
        <import type="android.view.View"/>
		<variable
            name="imageThumbnailViewModel"
            type="com.njstyle.gettyimagesgallery.ui.image.ImageThumbnailViewModel"/>
	</data>

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<ProgressBar
			android:id="@+id/pbWait"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"

            android:visibility="@{safeUnbox(imageThumbnailViewModel.isWaiting) ? View.VISIBLE : View.GONE}"

			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			/>

		<android.support.v7.widget.RecyclerView
			android:id="@+id/rvImageThumbnailList"
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:scrollbars="vertical"
			android:background="#000000"

            android:visibility="@{safeUnbox(imageThumbnailViewModel.isWaiting) ? View.GONE : View.VISIBLE}"

            app:items="@{imageThumbnailViewModel.items}"
			/>
	</android.support.constraint.ConstraintLayout>
</layout>
